--- a/src/styles/page-sections.scss
+++ b/src/styles/page-sections.scss
@@ -105,8 +105,10 @@
 }
 
 #intro {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	min-height: calc(100vh - var(--section-nav-height, 3.25rem));
-	align-content: center;
 }
 
 #skills {
@@ -333,8 +335,6 @@ body.is-preload #header:after {
 
 #footer {
 	padding: 6em 0 6em 0 ;
-	min-height: calc(100vh - var(--section-nav-height, 3.25rem));
-	align-content: center;
 	background-color: v.$color-brand-blue;
 	color: v.$color-white-75;
 	background-attachment: fixed, fixed;
